// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1200}
      createdAt={0}
      description="Video Game"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={42}
      createdAt={-345600000}
      description="Clay"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={2000}
      createdAt={345600000}
      description="Creppe"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      No expenses
    </div>
  </div>
</div>
`;
